# ClockThingie

./: CMakeLists.txt
src/: ball.cpp  ball.h  game.cpp  game.h  main.cpp
